testsuite/tests/properties/invalid_underscore/test.out
== do_lambda_arg/test.lkt ==
test.lkt:5:72: error: no entity called '_' in scope for lambda expression at test.lkt:5:65
5 |     @exported fun p(n: Entity[FooNode]): Entity[FooNode] = n.do((_) => _)
  |                                                                        ^


== val/test.lkt ==
test.lkt:7:9: error: no entity called '_' in scope for block at test.lkt:5:31
7 |         _
  |         ^


lkt_compile: Done
